fixed comment frontend
backend is still messed up

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -20,10 +20,24 @@ p.light {
 	margin: 0 1em 1em 0;
 }
 
-.comments {
-	.comment-list > li {
-		margin-bottom: 2em;
-		border-bottom: 1px solid #333;
-		padding-bottom: 1em;
+.comments > li {
+	background: #fff;
+	border: 1px solid #e9e9e9;
+
+	.comment {
+		padding: 1rem;
+	}
+
+	.children {
+		border-top: 1px solid #e9e9e9;
+
+		li {
+			border-bottom: 1px solid #e9e9e9;
+			padding: 1rem 1rem 1rem 3rem;
+
+			&:last-child {
+				border-bottom: none;
+			}
+		}
 	}
 }
